# experiments-philip

./: .gitignore  LICENSE  README.md  ants.html  index.html  main.py  pyproject.toml  saccade.html
docs/: index.html  meta.json
pipeline/: IDENTITY_SOLVER.md  PLAN_A.md  aphilip_failure_audit.py  aphilip_overlay.py  cluster_events.py  export_viewer.py  filter_grid_artifacts.py  identity_solver.py  load_track.py  resolved_overlay.py  run.py  run_step1_max60.py  sam2_modal.py  seed_detect.py  smoke_metrics.py  smoke_overlay.py  stitch_tracks.py  tracklet_graph.py  trex_overlay.py  visualize_event.py
pipeline/viewer/: index.html  serve.py
scripts/: fetch_data.sh
